Modifica Order.css se disminuye el radio

--- a/style/order.css
+++ b/style/order.css
@@ -15,7 +15,8 @@
     flex-wrap: wrap;
 
     margin: 15px;
-    border-radius: 20%;
+    padding: 10px;
+    border-radius: 10%;
     border: 5px solid #333;
 
 }
