Modifica Order.css cambia color de fondo

--- a/style/order.css
+++ b/style/order.css
@@ -19,7 +19,8 @@
 #InfoOrder .OrdenesContenedor article
 {
     padding: 20px;
-    background: #62BE6F;
+    background: #A6BCA9;
+    left: 0;
 }
 
 
