Modifica Order.css agrega max-width a articulos

--- a/style/order.css
+++ b/style/order.css
@@ -28,6 +28,7 @@
 #InfoOrder .OrdenesContenedor article
 {
     width: 100%;
+    max-width: 300px;
     margin: 20px;
     background: #A6BCA9;
     left: 0;
