Modifica main.css cambia px por % en contenedor

--- a/style/main.css
+++ b/style/main.css
@@ -124,7 +124,8 @@ footer .contenedor
     /* TODOS los Contenedores */
     .contenedor
     {
-        width: 1300px;
+        /*width: 1300px;*/
+        width: 96%;
         
     }
     
