Modifica Order.css tamaño titulo h3

--- a/style/order.css
+++ b/style/order.css
@@ -7,6 +7,12 @@
     padding: 20px;
 }
 
+/*Titulo del Listado de Ordenes de Trabajos*/
+#InfoOrder h3
+{
+    font-size: 20px;
+}
+
 /* EL Contenedor donde estan los articulos*/
 .OrdenesContenedor
 {
